--- a/package.json
+++ b/package.json
@@ -43,13 +43,14 @@
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
     "@nx/vite": "~18.0.0",
-    "nx": "~18.0.0",
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^4.9.0",
     "jsdom": "^22.1.0",
+    "nx": "~18.0.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.0",
-    "vitest": "^1.3.1",
-    "tailwindcss": "^3.3.1",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.14"
+    "vitest": "^1.3.1"
   }
 }
